force-app/main/default/objects/Provider_Procedure__c/Provider_Procedure__c.object-meta.xml
<CustomObject>
    <label>Provider Procedure</label>
    <nameField>
        <label>Provider Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Procedures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>