force-app/main/default/objects/Provider_Procedure__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <label>Procedure</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Provider Procedures</relationshipLabel>
    <relationshipName>Provider_Procedures</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>