force-app/main/default/objects/Provider_Procedure__c/fields/Procedure_Category__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Category__c</fullName>
    <formula>Text( Procedure__r.Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedure Category</label>
    <type>Text</type>
</CustomField>