force-app/main/default/objects/Provider_Procedure__c/fields/Procedure_Name__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Name__c</fullName>
    <formula>Procedure__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedure Name</label>
    <type>Text</type>
</CustomField>